tests/language_tests/pass/0020_negative_variable_arithmetic.ee
fn main() {
    let x = -5;
    let y = 2;
    print(x + y);
}
