tests/language_tests/fail/0011_self_referential_initializer.ee
fn main() {
    let x = x + 1;
}
